hotfix(ci.jenkins.io) deal with hieradata YAML parser misbehaving with indentation in passthrough YAML
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
@@ -50,8 +50,10 @@ profile::jenkinscontroller::jcasc:
               discarder:
                 logRotator:
                   numToKeepStr: "5"
-      defaultDisplayUrlProvider:
-        providerId: "org.jenkinsci.plugins.displayurlapi.ClassicDisplayURLProvider"
+        # Weird indentation: we would expect 2 less spaces below
+        # but hierdata is behaving weirdly (bug in YAML parser?)
+        defaultDisplayUrlProvider:
+          providerId: "org.jenkinsci.plugins.displayurlapi.ClassicDisplayURLProvider"
   tools:
     groovy:
       groovy: # Default version is named "groovy"
