chore(updatecli) use native YAML and HCL resources feature to parse remote files or checking keys in conditions
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/docker-ce.yaml
+++ b/updatecli/weekly.d/docker-ce.yaml
@@ -24,11 +24,12 @@ sources:
 
 conditions:
   checkIfHieradataCommonHasDockerVersionKey:
-    kind: file
+    kind: yaml
     disablesourceinput: true
     spec:
       file: hieradata/common.yaml
-      matchpattern: "docker::version:.*"
+      keyonly: true
+      key: $.docker::version
 
 targets:
   UpdateHieradataCommonHasDockerVersionKey:
