--- a/updatecli/weekly.d/jenkinscontroller-agents-windows-vm-disk-size.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents-windows-vm-disk-size.yaml
@@ -22,18 +22,12 @@ sources:
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
   getWindowsVMAgentsDiskSize:
-    kind: file
+    kind: hcl
     dependson:
       - packerImageVersion
     spec:
       file: 'https://raw.githubusercontent.com/jenkins-infra/packer-images/{{ source `packerImageVersion` }}/locals.pkr.hcl'
-      # matchpattern can only retrieve the full line. A transformer is required after to strip the unused content
-      matchpattern: 'windows_disk_size_gb = (.*)'
-    transformers:
-      ## Retrieve only the integer (ignore whitespaces, comments, etc.)
-      - findsubmatch:
-          pattern: 'windows_disk_size_gb = (\d*)'
-          captureindex: 1
+      path: locals.windows_disk_size_gb
 
 targets:
   setWindowsVMAgentDiskSize:
