chore(cert.ci) document the maven tool versions
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/controller.cert.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.cert.ci.jenkins.io.yaml
@@ -37,6 +37,7 @@ profile::jenkinscontroller::jcasc:
   global_libraries:
     disabled: true
   tools:
+    # Multiple Maven versions managed by the controller users (JenSec team)
     maven:
       mvn:
         disabled: true
