feat(jenkinscontroller) use native git tool on cert.ci.jio but keep default jgit tool on ci.jio and trusted.ci.jio
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -197,6 +197,7 @@ profile::jenkinscontroller::jcasc:
             type: "zip"
             label: "windows"
             os: "windows"
+    jgit: true # Set to false to use Native `git` CLI
   agents_setup:
     windows:
       agentDir: 'C:/Jenkins/agent'
