Add `better-pipeline-flowgraph-table` to cert.ci

--- a/hieradata/clients/controller.cert.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.cert.ci.jenkins.io.yaml
@@ -196,4 +196,5 @@ profile::jenkinscontroller::plugins:
   - workflow-basic-steps
 
   # Utility
+  - better-pipeline-flowgraph-table
   - compact-columns
