feat(controllers) ensure the plugin disable-job-button is installed
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/controller.cert.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.cert.ci.jenkins.io.yaml
@@ -198,3 +198,4 @@ profile::jenkinscontroller::plugins:
   # Utility
   - better-pipeline-flowgraph-table
   - compact-columns
+  - disable-job-button
