--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -122,6 +122,7 @@ profile::jenkinscontroller::jcasc:
         max_capacity: 150
         url: SuperSecretThatShouldBeEncyptedInProduction
         defaultNamespace: jenkins-agents
+        acpServerId: internal
         agent_definitions:
           - name: jnlp-maven-bom
             imageName: jnlp-maven-all-in-one
@@ -197,6 +198,7 @@ profile::jenkinscontroller::jcasc:
           virtualNetworkResourceGroupName: "vnet-rg"
           subnetName: "vnet-agents"
           storageAccount: SuperSecretEncryptedInProduction
+          acpServerId: internal
         azure-vms-secondary:
           azureCredentialsId: "azure-secondary-credentials" # Managed manually
           resourceGroup: ci-jenkins-io-ephemeral-agents-secondary
@@ -206,6 +208,7 @@ profile::jenkinscontroller::jcasc:
           subnetName: "vnet-secondary-subnet-agents"
           disableSpot: true # Not enough quota available
           storageAccount: SuperSecretEncryptedInProductionSecondary
+          acpServerId: external
       agent_definitions:
         - name: "ubuntu-22-inbound"
           description: "Ubuntu 22.04 LTS"
@@ -326,9 +329,11 @@ profile::jenkinscontroller::jcasc:
         aci-windows:
           credentialsId: azure-credentials
           resourceGroup: ci-jenkins-io-ephemeral-agents
+          acpServerId: internal
         aci-windows-jenkins-sponsorship:
           credentialsId: azure-jenkins-sponsorship-credentials
           resourceGroup: ci-jenkins-io-ephemeral-agents
+          acpServerId: external
       agent_definitions:
         - name: maven-8-windows
           os: windows
@@ -363,7 +368,16 @@ profile::jenkinscontroller::jcasc:
           labels:
             - maven-21-windows
   artifact_caching_proxy:
-    disabled: false
+    enabled: true
+    servers:
+      internal:
+        name: Dummy Internal Artifact Caching Proxy
+        url: http://127.0.0.1:8080/
+      external:
+        name: Dummy External Artifact Caching Proxy
+        url: http://external:8080/
+        credentials:
+          - "credentialIdInJenkins"
   datadog:
     host: "vagrant.local"
     targetHost: "172.18.0.1" # docker0 interface in vagrant is non standard (because docker in docker)
