--- a/hieradata/clients/controller.cert.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.cert.ci.jenkins.io.yaml
@@ -196,7 +196,7 @@ profile::jenkinscontroller::jcasc:
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
           usePrivateIP: true
-        - name: "win-2019" # The name must not contains "windows" or Azure API complains :facepalm:
+        - name: "win-2019-amd64-maven-11" # The name must not contains "windows" or Azure API complains :facepalm:
           description: "Windows 2019"
           imageDefinition: jenkins-agent-windows-2019-amd64
           os: "windows"
@@ -210,6 +210,10 @@ profile::jenkinscontroller::jcasc:
           labels:
             - windows
             - docker-windows
+            - win-2019
+            - windows-2019
+            - win-2019-amd64-maven-11
+          javaHome: 'C:/tools/jdk-11'
           maxInstances: 10 # Quota of 80 vCPUs
           useAsMuchAsPossible: true
           credentialsId: "azure-login"
