--- a/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
@@ -534,7 +534,7 @@ profile::jenkinscontroller::jcasc:
           usePrivateIP: true
           credentialsId: "jenkinsvmagents-userpass"
           spot: false
-        - name: "win-2019" # The name must not contains "windows" or Azure API complains :facepalm:
+        - name: "win-2019-amd64-maven-11" # The name must not contains "windows" or Azure API complains :facepalm:
           description: "Windows 2019"
           imageDefinition: jenkins-agent-windows-2019-amd64
           os: "windows"
@@ -548,12 +548,16 @@ profile::jenkinscontroller::jcasc:
             - docker-windows
             - docker-windows-2019
             - windows
+            - win-2019
+            - windows-2019
+            - win-2019-amd64-maven-11
+          javaHome: 'C:/tools/jdk-11'
           maxInstances: 50
           useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
           usePrivateIP: true
           spot: true
-        - name: "win-2022" # The name must not contains "windows" or Azure API complains :facepalm:
+        - name: "win-2022-amd64-maven-11" # The name must not contains "windows" or Azure API complains :facepalm:
           description: "Windows 2022"
           imageDefinition: jenkins-agent-windows-2022-amd64
           os: "windows"
@@ -565,6 +569,10 @@ profile::jenkinscontroller::jcasc:
           architecture: amd64
           labels:
             - docker-windows-2022
+            - win-2022
+            - windows-2022
+            - win-2022-amd64-maven-11
+          javaHome: 'C:/tools/jdk-11'
           maxInstances: 50
           useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
