--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -301,12 +301,15 @@ profile::jenkinscontroller::jcasc:
             - docker-windows
             - docker-windows-2019
             - windows
+            - win-2019
+            - windows-2019
+            - win-2019-amd64-maven-11
+          javaHome: 'C:/Tools/openjdk-11' # Test override of the default JDK for builds
           maxInstances: 50
           useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
           usePrivateIP: true
           spot: true
-          javaHome: 'C:/Tools/openjdk-11' # Test override of the default JDK for builds
           agentJavaBin: 'C:/Tools/openjdk-17' # Test override of the default JDK for builds
         - name: "win-2022-ssh" # The name must not contains "windows" or Azure API complains :facepalm:
           description: "Windows 2022"
