feat(ci.jio): Added AZ inbound VM templates for win-2019 jdk17 & jdk21 (#3602)
* feat(ci.jio): Added AZ inbound VM templates for win-2019 jdk17 & jdk21

Signed-off-by: jayfranco999 <jaideepfrancis999@gmail.com>

* Apply suggestions from code review

fixup

Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

* fixup

Signed-off-by: jayfranco999 <jaideepfrancis999@gmail.com>

---------

Signed-off-by: jayfranco999 <jaideepfrancis999@gmail.com>
Co-authored-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
+++ b/hieradata/clients/controller.sponsorship.ci.jenkins.io.yaml
@@ -535,7 +535,7 @@ profile::jenkinscontroller::jcasc:
           credentialsId: "jenkinsvmagents-userpass"
           spot: false
         - name: "win-2019-amd64-maven-11" # The name must not contains "windows" or Azure API complains :facepalm:
-          description: "Windows 2019"
+          description: "Windows 2019 x86_64 JDK11"
           imageDefinition: jenkins-agent-windows-2019-amd64
           os: "windows"
           os_version: "2019"
@@ -552,6 +552,42 @@ profile::jenkinscontroller::jcasc:
             - windows-2019
             - win-2019-amd64-maven-11
           javaHome: 'C:/tools/jdk-11'
+          maxInstances: 50
+          useAsMuchAsPossible: true
+          credentialsId: "jenkinsvmagents-userpass"
+          usePrivateIP: true
+          spot: true
+        - name: "win-2019-amd64-maven-17"
+          description: "Windows 2019 x86_64 with JDK17"
+          imageDefinition: jenkins-agent-windows-2019-amd64
+          os: "windows"
+          os_version: "2019"
+          launcher: "inbound"
+          location: "East US 2"
+          instanceType: Standard_D4ads_v5 # 4 vCPUS / 16 Gb / Max 150 Gb local storage
+          ephemeralOSDisk: true
+          architecture: amd64
+          labels:
+            - win-2019-amd64-maven-17
+          javaHome: 'C:/tools/jdk-17'
+          maxInstances: 50
+          useAsMuchAsPossible: true
+          credentialsId: "jenkinsvmagents-userpass"
+          usePrivateIP: true
+          spot: true
+        - name: "win-2019-amd64-maven-21"
+          description: "Windows 2019 x86_64 with JDK21"
+          imageDefinition: jenkins-agent-windows-2019-amd64
+          os: "windows"
+          os_version: "2019"
+          launcher: "inbound"
+          location: "East US 2"
+          instanceType: Standard_D4ads_v5 # 4 vCPUS / 16 Gb / Max 150 Gb local storage
+          ephemeralOSDisk: true
+          architecture: amd64
+          labels:
+            - win-2019-amd64-maven-21
+          javaHome: 'C:/tools/jdk-21'
           maxInstances: 50
           useAsMuchAsPossible: true
           credentialsId: "jenkinsvmagents-userpass"
